--- a/app/src/main/res/layout/fragmentq1.xml
+++ b/app/src/main/res/layout/fragmentq1.xml
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmentq1_container"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context="com.wisc.cs.klay2.klayquizzonificationsoftwareexcellenttime.Fragmentq1">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NEXT"
+        android:id="@+id/buttonNext"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="HEADER"
-            android:id="@+id/header"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="42dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="QUESTION CONTENT GOES IN HERE"
-            android:id="@+id/questionText"
-            android:textSize="24dp"
-            android:layout_above="@+id/buttonAns1"
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center" />
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/radioGroup">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ANSWER TEXT 1 GOES IN HERE"
             android:id="@+id/buttonAns1"
-            android:layout_above="@+id/buttonAns2"
-            android:layout_centerHorizontal="true" />
+            android:layout_below="@+id/questionText"
+            android:layout_alignStart="@+id/radioGroup" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -53,13 +43,30 @@
             android:id="@+id/buttonAns3"
             android:layout_below="@+id/buttonAns2"
             android:layout_centerHorizontal="true" />
+        </RadioGroup>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NEXT"
-            android:id="@+id/button3"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
-</FrameLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="HEADER"
+        android:id="@+id/header"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentCenter="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="42dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="QUESTION CONTENT GOES IN HERE"
+        android:id="@+id/questionText"
+        android:textSize="24dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/header"
+        android:layout_alignParentStart="true" />
+
+</RelativeLayout>
