--- a/app/src/main/res/layout/fragmentq2.xml
+++ b/app/src/main/res/layout/fragmentq2.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context="com.wisc.cs.klay2.klayquizzonificationsoftwareexcellenttime.Fragmentq2">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_below="@+id/textView3"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -25,15 +27,15 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="QUESTION TEXT GOES IN HERE"
         android:id="@+id/textView4"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:textSize="24dp" />
+        android:textSize="24dp"
+        android:layout_above="@+id/imageView"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NEXT"
-        android:id="@+id/button2"
+        android:id="@+id/buttonNext"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
@@ -41,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_above="@+id/button2"
+        android:layout_above="@+id/buttonNext"
         android:layout_centerHorizontal="true"
         android:text="USER TYPES IN ANSWER HERE" />
 
