--- a/app/src/main/res/layout/fragmentq2.xml
+++ b/app/src/main/res/layout/fragmentq2.xml
@@ -12,16 +12,18 @@
         android:id="@+id/header"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="42dp" />
+        android:textSize="32dp"
+        android:textAlignment="center" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:src="@drawable/vaporwaverei"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        android:layout_alignBottom="@+id/buttonNext"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="false" />
 
     <TextView
         android:layout_width="wrap_content"
