--- a/app/src/main/res/layout/fragmentq2.xml
+++ b/app/src/main/res/layout/fragmentq2.xml
@@ -4,36 +4,13 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context="com.wisc.cs.klay2.klayquizzonificationsoftwareexcellenttime.Fragmentq2">
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="HEADER"
-        android:id="@+id/header"
-        android:layout_alignParentTop="true"
+        android:id="@+id/answerField"
+        android:layout_above="@+id/buttonNext"
         android:layout_centerHorizontal="true"
-        android:textSize="32dp"
-        android:textAlignment="center" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/image"
-        android:src="@drawable/vaporwaverei"
-        android:scaleType="fitCenter"
-        android:layout_alignBottom="@+id/buttonNext"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="QUESTION TEXT GOES IN HERE"
-        android:id="@+id/questionText"
-        android:textSize="24dp"
-        android:layout_above="@+id/image"
-        android:layout_centerHorizontal="true" />
+        android:text="USER TYPES IN ANSWER HERE" />
 
     <Button
         android:layout_width="wrap_content"
@@ -43,12 +20,35 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/answerField"
-        android:layout_above="@+id/buttonNext"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="QUESTION TEXT GOES IN HERE"
+        android:id="@+id/questionText"
+        android:textSize="24dp"
         android:layout_centerHorizontal="true"
-        android:text="USER TYPES IN ANSWER HERE" />
+        android:layout_below="@+id/header" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="HEADER"
+        android:id="@+id/header"
+        android:textSize="32dp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/image"
+        android:src="@drawable/vaporwaverei"
+        android:scaleType="fitCenter"
+        android:layout_above="@+id/answerField"
+        android:layout_centerHorizontal="true"
+         />
 
 </RelativeLayout>
